[workspace]
members = ["leptos-conf-markdown"]

[package]
name = "hampus-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.8.12", features = ["csr"] }
leptos-conf-markdown = { version = "0.1.0", path = "leptos-conf-markdown" }
leptos_router = "0.8.9"
log = "0.4.28"
